Freemarker文件重命名