@@ -2,6 +2,8 @@ package com.sojson.common.utils;
 
 import java.io.UnsupportedEncodingException;
 import java.util.ArrayList;
+import java.util.Base64;
+import java.util.Base64.Decoder;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -13,11 +15,6 @@ import java.util.regex.Pattern;
 
 import net.sf.json.JSONArray;
 import net.sf.json.JSONObject;
-import sun.misc.BASE64Decoder;
-
-
-
-
 
 
 /**
@@ -161,7 +158,7 @@ public class StringUtils extends org.apache.commons.lang.StringUtils{
 	 */
     public static String getBASE64(String str,boolean...bf) { 
        if (StringUtils.isBlank(str)) return null; 
-       String base64 = new sun.misc.BASE64Encoder().encode(str.getBytes()) ;
+       String base64 = Base64.getEncoder().encodeToString(str.getBytes());
        //去掉 '='
        if(isBlank(bf) && bf[0]){
     	   base64 = base64.replaceAll("=", "");
@@ -172,9 +169,9 @@ public class StringUtils extends org.apache.commons.lang.StringUtils{
     /** 将 BASE64 编码的字符串 s 进行解码**/
     public static String getStrByBASE64(String s) { 
        if (isBlank(s)) return ""; 
-       BASE64Decoder decoder = new BASE64Decoder(); 
+       Decoder decoder = Base64.getDecoder();
        try { 
-          byte[] b = decoder.decodeBuffer(s); 
+          byte[] b = decoder.decode(s);
           return new String(b); 
        } catch (Exception e) { 
           return ""; 
